unpackaged/main/default/objects/Lead/fields/Additional_Fields__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fields__c</fullName>
    <label>Additional Fields</label>
    <type>TextArea</type>
</CustomField>