unpackaged/main/default/objects/Lead/fields/Competitor_Coming_From__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Coming_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Coming From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Competitor Coming From)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>