unpackaged/main/default/objects/Lead/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <label>County Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>