unpackaged/main/default/objects/Lead/fields/Current_Rates__c.field-meta.xml
<CustomField>
    <fullName>Current_Rates__c</fullName>
    <label>Current Rates</label>
    <type>TextArea</type>
</CustomField>