unpackaged/main/default/objects/Lead/fields/Decile_Model_1__c.field-meta.xml
<CustomField>
    <fullName>Decile_Model_1__c</fullName>
    <label>Decile Model 1</label>
    <type>TextArea</type>
</CustomField>