unpackaged/main/default/objects/Lead/fields/Decile_Model_2__c.field-meta.xml
<CustomField>
    <fullName>Decile_Model_2__c</fullName>
    <label>Decile Model 2</label>
    <type>TextArea</type>
</CustomField>