unpackaged/main/default/objects/Lead/fields/Decile_Model_3__c.field-meta.xml
<CustomField>
    <fullName>Decile_Model_3__c</fullName>
    <label>Decile Model 3</label>
    <type>TextArea</type>
</CustomField>