unpackaged/main/default/objects/Lead/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>