unpackaged/main/default/objects/Lead/fields/Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Individual_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Individual Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>