unpackaged/main/default/objects/Lead/fields/Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Lead_Count__c</fullName>
    <label>Lead Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>