unpackaged/main/default/objects/Lead/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Member Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>