unpackaged/main/default/objects/Lead/fields/Plan_Designs__c.field-meta.xml
<CustomField>
    <fullName>Plan_Designs__c</fullName>
    <label>Plan Designs</label>
    <type>TextArea</type>
</CustomField>