unpackaged/main/default/objects/Lead/fields/Text_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Opt_In_Date__c</fullName>
    <label>Text Opt In Date</label>
    <type>Date</type>
</CustomField>