unpackaged/main/default/objects/Lead/recordTypes/Agent.recordType-meta.xml
<RecordType>
    <fullName>Agent</fullName>
    <active>true</active>
    <businessProcess>Agent</businessProcess>
    <description>Represents as Agent Lead</description>
    <label>Agent</label>
</RecordType>