unpackaged/main/default/objects/Lead/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <businessProcess>Quartz Lead Process</businessProcess>
    <description>Represents as Group Lead</description>
    <label>Group</label>
</RecordType>