unpackaged/main/default/objects/Lead/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <businessProcess>Individual</businessProcess>
    <description>Represents as Individual Lead</description>
    <label>Individual</label>
</RecordType>