unpackaged/main/default/objects/Lead/validationRules/Require_For_Conversion_Birthdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_For_Conversion_Birthdate</fullName>
    <active>true</active>
    <description>Birth Date is required for converting an individual lead, in order for age to be present</description>
    <errorConditionFormula>AND(IsConverted,
RecordType.Name=&quot;Individual&quot;,
ISBLANK(HealthCloudGA__BirthDate__c))</errorConditionFormula>
    <errorMessage>Birth Date is required to convert an individual lead</errorMessage>
</ValidationRule>