unpackaged/main/default/objects/Lead/validationRules/Require_For_Conversion_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_For_Conversion_Company</fullName>
    <active>true</active>
    <description>Company is required for Agent Lead Record Type to be converted</description>
    <errorConditionFormula>AND(IsConverted,
RecordType.Name=&quot;Agent&quot;,
ISBLANK(Company))</errorConditionFormula>
    <errorMessage>Company is required to convert an Agent lead</errorMessage>
</ValidationRule>